--- a/index.html
+++ b/index.html
@@ -33,34 +33,161 @@
         <li>Kids</li>
       </ul>
     </section>
-    <section class="carousel">
-      <div class="slider">
-        <div class="slides">
-          <div id="slide-1">
-            <img class="imgslide" src="./images/fnaf.jpeg" />
-          </div>
-          <div id="slide-2">
-            <img class="imgslide" src="./images/flowermoon2.jpg" />
-          </div>
-          <div id="slide-3">
-            <img class="imgslide" src="./images/wish.jpeg" />
-          </div>
-          <div id="slide-4">
-            <img class="imgslide" src="./images/hungergames.jpg" />
-          </div>
-          <div id="slide-5">
-            <img class="imgslide" src="./images//trolls.webp" />
-          </div>
-        </div>
+    <section class="carousel" aria-label="carousel">
+      <section class="slides">
+        <a href="./film.html">
+          <img
+            class="slides-item slide-1"
+            id="slide-1"
+            src="./images/fnaf.jpeg"
+            aria-label="slide 1 of 5"
+            alt="Five night at freddy's "
+          />
+        </a>
+        <img
+          class="slides-item slide-2"
+          id="slide-2"
+          src="./images/hungergames.jpg"
+          aria-label="slide 2 of 5"
+          alt="Hungergames, klik voor meer info"
+        />
 
-        <!-- <a href="#slide-1">1</a>
-        <a href="#slide-2">2</a>
-        <a href="#slide-3">3</a>
-        <a href="#slide-4">4</a>
-        <a href="#slide-5">5</a> -->
-      </div>
+        <img
+          class="slides-item slide-3"
+          id="slide-3"
+          src="./images/flowermoon2.jpg"
+          aria-label="slide 3 of 5"
+          alt="flowermoon"
+        />
+
+        <img
+          class="slides-item slide-4"
+          id="slide-4"
+          src="./images/wish.jpeg"
+          aria-label="slide 4 of 5"
+          alt="wish"
+        />
+
+        <img
+          class="slides-item slide-5"
+          id="slide-5"
+          src="./images/trolls.webp"
+          aria-label="slide 5 of 5"
+          alt="trolls"
+        />
+      </section>
       <button class="button">Koop nu</button>
     </section>
-    <section class="sectie2"><h2>Bestel nu je tickets</h2></section>
+
+    <section class="sectie-Tickets">
+      <h2>Bestel nu je tickets</h2>
+      <section class="togglecon">
+        <section class="daynight">
+          <label for="checkbox">
+            <input type="checkbox" name="" id="checkbox" />
+            <section class="toggle"></section>
+          </label>
+        </section>
+      </section>
+      <h2>Wat is jouw locatie</h2>
+      <form>
+        <input type="text" placeholder="Search..." class="search-bar" />
+      </form>
+      <section class="carousel-nieuws" aria-label="carousel-nieuws">
+        <section class="slides-nieuws">
+          <img
+            class="slides-item-nieuws slide-1-nieuws"
+            id="slide-1"
+            src="./images/Nieuws1.png"
+            aria-label="slide 1 of 5"
+            alt="stichting jarige job"
+          />
+
+          <img
+            class="slides-item-nieuws slide-2-nieuws"
+            id="slide-2"
+            src="./images/Nieuws2.png"
+            aria-label="slide 2 of 5"
+            alt="geef pathe cadeaubon"
+          />
+
+          <img
+            class="slides-item-nieuws slide-3-nieuws"
+            id="slide-3"
+            src="./images/Nieuws3.png"
+            aria-label="slide 3 of 5"
+            alt="Nieuwe stoelen in pathe Scheveningen"
+          />
+
+          <img
+            class="slides-item-nieuws slide-4-nieuws"
+            id="slide-4"
+            src="./images/Nieuws4.png"
+            aria-label="slide 4 of 5"
+            alt="Vier 100 jaar disney bij Pathe"
+          />
+
+          <img
+            class="slides-item-nieuws slide-5-nieuws"
+            id="slide-5"
+            src="./images/Nieuws5.png"
+            aria-label="Vier het sinterklaas weekend bij Pathe"
+            alt=""
+          />
+        </section>
+      </section>
+      <img
+        class="ClubPathe"
+        src="./images/Clubpathe.webp"
+        alt="ClubPathe Logo"
+      />
+      <h2>abonnementen - nu 1 maand gratis met code:ClubPathe</h2>
+      <p>
+        Van film genieten is nog nooit zo voordelig geweest. Met de flexibele
+        Club Pathé abonnementen kun je (onbeperkt) op alle dagen van de week
+        naar de film, in alle Pathé bioscopen in Nederland. Eén keer per maand,
+        onbeperkt of met de hele familie? Door de diverse bundels en extra's is
+        er altijd een abonnement dat bij je past!
+      </p>
+      <button class="button">Klik hier voor 1 maand gratis</button>
+      <img
+        class="Imax"
+        src="./images/imax-2.png"
+        alt="ontdek imax. Het verschil tussen zien en ervaren"
+      />
+      <img src="./images/Clubpathe.webp" />
+      <h2>abonnementen - nu 1 maand gratis met code:ClubPathe</h2>
+      <p>
+        Van film genieten is nog nooit zo voordelig geweest. Met de flexibele
+        Club Pathé abonnementen kun je (onbeperkt) op alle dagen van de week
+        naar de film, in alle Pathé bioscopen in Nederland. Eén keer per maand,
+        onbeperkt of met de hele familie? Door de diverse bundels en extra's is
+        er altijd een abonnement dat bij je past!
+      </p>
+      <button class="button">Klik hier voor 1 maand gratis</button>
+      <img
+        class="Giftcard"
+        src="./images/Giftcard.png"
+        alt="Bestel een pathe giftcard"
+      />
+    </section>
+    <footer>
+      <img class="Icon" src="./images/xlogo.svg" alt="Bezoek onze x pagina " />
+      <img
+        class="Icon"
+        src="./images/insta-svgrepo-com.svg"
+        alt="Bezoek onze Instagram pagina"
+      />
+      <img
+        class="Icon"
+        src="./images/tiktok-svgrepo-com.svg"
+        alt="Bezoek onze Tiktok pagina"
+      />
+      <img
+        class="Icon"
+        src="./images/facebook-svgrepo-com.svg"
+        alt="Bezoek onze facbook pagina "
+      />
+    </footer>
   </body>
 </html>
