--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header class="header">
       <nav>
-        <img class="logo" src="./images/Logo.png" />
+        <img class="logo" src="./images/Logo.png" alt="Pathe logo" />
         <input class="menu-btn" type="checkbox" id="menu-btn" />
         <label class="menu-icon" for="menu-btn"
           ><span class="navicon"></span
@@ -39,7 +39,7 @@
           <img
             class="slides-item slide-1"
             id="slide-1"
-            src="./images/fnaf.jpeg"
+            src="/images/fnaf.jpeg"
             aria-label="slide 1 of 5"
             alt="Five night at freddy's "
           />
@@ -47,7 +47,7 @@
         <img
           class="slides-item slide-2"
           id="slide-2"
-          src="./images/hungergames.jpg"
+          src="/images/hungergames.jpg"
           aria-label="slide 2 of 5"
           alt="Hungergames, klik voor meer info"
         />
@@ -55,7 +55,7 @@
         <img
           class="slides-item slide-3"
           id="slide-3"
-          src="./images/flowermoon2.jpg"
+          src="/images/flowermoon2.jpg"
           aria-label="slide 3 of 5"
           alt="flowermoon"
         />
@@ -63,7 +63,7 @@
         <img
           class="slides-item slide-4"
           id="slide-4"
-          src="./images/wish.jpeg"
+          src="/images/wish.jpeg"
           aria-label="slide 4 of 5"
           alt="wish"
         />
@@ -71,7 +71,7 @@
         <img
           class="slides-item slide-5"
           id="slide-5"
-          src="./images/trolls.webp"
+          src="/images/trolls.webp"
           aria-label="slide 5 of 5"
           alt="trolls"
         />
@@ -98,7 +98,7 @@
           <img
             class="slides-item-nieuws slide-1-nieuws"
             id="slide-1"
-            src="./images/Nieuws1.png"
+            src="/images/Nieuws1.png"
             aria-label="slide 1 of 5"
             alt="stichting jarige job"
           />
@@ -106,7 +106,7 @@
           <img
             class="slides-item-nieuws slide-2-nieuws"
             id="slide-2"
-            src="./images/Nieuws2.png"
+            src="/images/Nieuws2.png"
             aria-label="slide 2 of 5"
             alt="geef pathe cadeaubon"
           />
@@ -114,7 +114,7 @@
           <img
             class="slides-item-nieuws slide-3-nieuws"
             id="slide-3"
-            src="./images/Nieuws3.png"
+            src="/images/Nieuws3.png"
             aria-label="slide 3 of 5"
             alt="Nieuwe stoelen in pathe Scheveningen"
           />
@@ -122,7 +122,7 @@
           <img
             class="slides-item-nieuws slide-4-nieuws"
             id="slide-4"
-            src="./images/Nieuws4.png"
+            src="/images/Nieuws4.png"
             aria-label="slide 4 of 5"
             alt="Vier 100 jaar disney bij Pathe"
           />
@@ -130,7 +130,7 @@
           <img
             class="slides-item-nieuws slide-5-nieuws"
             id="slide-5"
-            src="./images/Nieuws5.png"
+            src="/images/Nieuws5.png"
             aria-label="Vier het sinterklaas weekend bij Pathe"
             alt=""
           />
@@ -138,7 +138,7 @@
       </section>
       <img
         class="ClubPathe"
-        src="./images/Clubpathe.webp"
+        src="/images/Clubpathe.webp"
         alt="ClubPathe Logo"
       />
       <h2>abonnementen - nu 1 maand gratis met code:ClubPathe</h2>
@@ -152,10 +152,13 @@
       <button class="button">Klik hier voor 1 maand gratis</button>
       <img
         class="Imax"
-        src="./images/imax-2.png"
+        src="/images/imax-2.png"
         alt="ontdek imax. Het verschil tussen zien en ervaren"
       />
-      <img src="./images/Clubpathe.webp" />
+      <img
+        src="./images/Clubpathe.webp"
+        alt="Club Pathe informatie, klik voor mee informatie"
+      />
       <h2>abonnementen - nu 1 maand gratis met code:ClubPathe</h2>
       <p>
         Van film genieten is nog nooit zo voordelig geweest. Met de flexibele
@@ -172,20 +175,20 @@
       />
     </section>
     <footer>
-      <img class="Icon" src="./images/xlogo.svg" alt="Bezoek onze x pagina " />
+      <img class="Icon" src="/images/xlogo.svg" alt="Bezoek onze x pagina " />
       <img
         class="Icon"
-        src="./images/insta-svgrepo-com.svg"
+        src="/images/insta-svgrepo-com.svg"
         alt="Bezoek onze Instagram pagina"
       />
       <img
         class="Icon"
-        src="./images/tiktok-svgrepo-com.svg"
+        src="/images/tiktok-svgrepo-com.svg"
         alt="Bezoek onze Tiktok pagina"
       />
       <img
         class="Icon"
-        src="./images/facebook-svgrepo-com.svg"
+        src="/images/facebook-svgrepo-com.svg"
         alt="Bezoek onze facbook pagina "
       />
     </footer>
