--- a/film.html
+++ b/film.html
@@ -9,7 +9,11 @@
   <body>
     <header class="header">
       <nav>
-        <img class="logo" src="./images/Logo.png" />
+        <img
+          class="logo"
+          src="./images/Logo.png"
+          alt="Pathe logo, klik om naar home pagina te gaan"
+        />
         <input class="menu-btn" type="checkbox" id="menu-btn" />
         <label class="menu-icon" for="menu-btn"
           ><span class="navicon"></span
@@ -37,7 +41,11 @@
     </section>
     <button class="button">Tijden & Tickets</button>
     <section class="Samenvatting">
-      <img class="rating" src="/images/rating.png" />
+      <img
+        class="rating"
+        src="/images/rating.png"
+        alt="Jonger dan 16? Dan geen toegang, ook niet onder begeleiding van een volwassene. Ter controle kan om legitimatie worden gevraagd."
+      />
       <p>
         De film volgt een bewaker met persoonlijke problemen die aan zijn nieuwe
         baan begint bij Freddy Fazbear’s Pizza. Tijdens zijn eerste nachtdienst
@@ -57,138 +65,93 @@
       <button class="button">Kies een Bioscoop</button>
     </section>
     <section class="Trailers_Foto">
-      <h2>Extra informatie</h2>
+      <h2>Trailers en foto's</h2>
+      <img class="trailer" src="/images/Trailer.png" alt="Bekijk de trailer" />
+      <h2>Still's</h2>
       <section class="carousel" aria-label="carousel">
         <section class="slides">
-          <a href="./film.html">
-            <img
-              class="slides-item slide-1"
-              id="slide-1"
-              src=""
-              aria-label="slide 1 of 5"
-              alt="Five night at freddy's "
-            />
-          </a>
+          <img
+            class="slides-item slide-1"
+            id="slide-1"
+            src="/images/still1.webp"
+            aria-label="slide 1 of 5"
+            alt="Josh is bang "
+          />
+
           <img
             class="slides-item slide-2"
             id="slide-2"
-            src=""
+            src="/images/still2.webp"
             aria-label="slide 2 of 5"
-            alt="Hungergames, klik voor meer info"
+            alt="matthew aan de telefoon"
           />
 
           <img
             class="slides-item slide-3"
             id="slide-3"
-            src=""
+            src="/images/still3.webp"
             aria-label="slide 3 of 5"
-            alt="flowermoon"
+            alt="piper kijkt bang"
           />
 
           <img
             class="slides-item slide-4"
             id="slide-4"
-            src=""
+            src="/images/still4.webp"
             aria-label="slide 4 of 5"
-            alt="wish"
+            alt="voorkant van het restaurant"
           />
 
           <img
             class="slides-item slide-5"
             id="slide-5"
-            src=""
+            src="/images/still5.webp"
             aria-label="slide 5 of 5"
-            alt="trolls"
+            alt="gele vogel"
           />
         </section>
       </section>
-      <h2>Extra informatie</h2>
+      <h2>Cast en crew</h2>
       <section class="carousel" aria-label="carousel">
         <section class="slides">
-          <a href="./film.html">
-            <img
-              class="slides-item slide-1"
-              id="slide-1"
-              src=""
-              aria-label="slide 1 of 5"
-              alt="Five night at freddy's "
-            />
-          </a>
+          <img
+            class="slides-item slide-1"
+            id="slide-1"
+            src="/images/cast1.webp"
+            aria-label="slide 1 of 5"
+            alt="emma tammi, regisseur"
+          />
+
           <img
             class="slides-item slide-2"
             id="slide-2"
-            src=""
+            src="/images/cast2.webp"
             aria-label="slide 2 of 5"
-            alt="Hungergames, klik voor meer info"
+            alt="josh hutcherson"
           />
 
           <img
             class="slides-item slide-3"
             id="slide-3"
-            src=""
+            src="/images/cast3.webp"
             aria-label="slide 3 of 5"
-            alt="flowermoon"
+            alt="elizabeth lail"
           />
 
           <img
             class="slides-item slide-4"
             id="slide-4"
-            src=""
+            src="/images/cast4.webp"
             aria-label="slide 4 of 5"
-            alt="wish"
+            alt="matthew lillard"
           />
 
           <img
             class="slides-item slide-5"
             id="slide-5"
-            src=""
+            src="/images/cast5.webp"
             aria-label="slide 5 of 5"
-            alt="trolls"
-          />
-        </section>
-      </section>
-      <h2>Extra informatie</h2>
-      <section class="carousel" aria-label="carousel">
-        <section class="slides">
-          <a href="./film.html">
-            <img
-              class="slides-item slide-1"
-              id="slide-1"
-              src=""
-              aria-label="slide 1 of 5"
-              alt="Five night at freddy's "
-            />
-          </a>
-          <img
-            class="slides-item slide-2"
-            id="slide-2"
-            src=""
-            aria-label="slide 2 of 5"
-            alt="Hungergames, klik voor meer info"
-          />
-
-          <img
-            class="slides-item slide-3"
-            id="slide-3"
-            src=""
-            aria-label="slide 3 of 5"
-            alt="flowermoon"
-          />
-
-          <img
-            class="slides-item slide-4"
-            id="slide-4"
-            src=""
-            aria-label="slide 4 of 5"
-            alt="wish"
-          />
-
-          <img
-            class="slides-item slide-5"
-            id="slide-5"
-            src=""
-            aria-label="slide 5 of 5"
-            alt="trolls"
+            alt="Piper rubio"
           />
         </section>
       </section>
