--- a/index.html
+++ b/index.html
@@ -39,23 +39,24 @@
           <img
             class="slides-item slide-1"
             id="slide-1"
-            src="/images/fnaf.jpeg"
+            src="./images/fnaf.jpeg"
             aria-label="slide 1 of 5"
             alt="Five night at freddy's "
           />
         </a>
-        <img
-          class="slides-item slide-2"
-          id="slide-2"
-          src="/images/hungergames.jpg"
-          aria-label="slide 2 of 5"
-          alt="Hungergames, klik voor meer info"
-        />
-
+        <a>
+          <img
+            class="slides-item slide-2"
+            id="slide-2"
+            src="./images/hungergames.jpg"
+            aria-label="slide 2 of 5"
+            alt="Hungergames, klik voor meer info"
+          />
+        </a>
         <img
           class="slides-item slide-3"
           id="slide-3"
-          src="/images/flowermoon2.jpg"
+          src="./images/flowermoon2.jpg"
           aria-label="slide 3 of 5"
           alt="flowermoon"
         />
@@ -63,7 +64,7 @@
         <img
           class="slides-item slide-4"
           id="slide-4"
-          src="/images/wish.jpeg"
+          src="./images/wish.jpeg"
           aria-label="slide 4 of 5"
           alt="wish"
         />
@@ -71,7 +72,7 @@
         <img
           class="slides-item slide-5"
           id="slide-5"
-          src="/images/trolls.webp"
+          src="./images/trolls.webp"
           aria-label="slide 5 of 5"
           alt="trolls"
         />
@@ -98,7 +99,7 @@
           <img
             class="slides-item-nieuws slide-1-nieuws"
             id="slide-1"
-            src="/images/Nieuws1.png"
+            src="./images/Nieuws1.png"
             aria-label="slide 1 of 5"
             alt="stichting jarige job"
           />
@@ -106,7 +107,7 @@
           <img
             class="slides-item-nieuws slide-2-nieuws"
             id="slide-2"
-            src="/images/Nieuws2.png"
+            src="./images/Nieuws2.png"
             aria-label="slide 2 of 5"
             alt="geef pathe cadeaubon"
           />
@@ -114,7 +115,7 @@
           <img
             class="slides-item-nieuws slide-3-nieuws"
             id="slide-3"
-            src="/images/Nieuws3.png"
+            src="./images/Nieuws3.png"
             aria-label="slide 3 of 5"
             alt="Nieuwe stoelen in pathe Scheveningen"
           />
@@ -122,7 +123,7 @@
           <img
             class="slides-item-nieuws slide-4-nieuws"
             id="slide-4"
-            src="/images/Nieuws4.png"
+            src="./images/Nieuws4.png"
             aria-label="slide 4 of 5"
             alt="Vier 100 jaar disney bij Pathe"
           />
@@ -130,7 +131,7 @@
           <img
             class="slides-item-nieuws slide-5-nieuws"
             id="slide-5"
-            src="/images/Nieuws5.png"
+            src="./images/Nieuws5.png"
             aria-label="Vier het sinterklaas weekend bij Pathe"
             alt=""
           />
