--- a/film.html
+++ b/film.html
@@ -73,7 +73,7 @@
           <img
             class="slides-item slide-1"
             id="slide-1"
-            src="/images/still1.webp"
+            src="./images/still1.webp"
             aria-label="slide 1 of 5"
             alt="Josh is bang "
           />
@@ -81,7 +81,7 @@
           <img
             class="slides-item slide-2"
             id="slide-2"
-            src="/images/still2.webp"
+            src="./images/still2.webp"
             aria-label="slide 2 of 5"
             alt="matthew aan de telefoon"
           />
@@ -89,7 +89,7 @@
           <img
             class="slides-item slide-3"
             id="slide-3"
-            src="/images/still3.webp"
+            src="./images/still3.webp"
             aria-label="slide 3 of 5"
             alt="piper kijkt bang"
           />
@@ -97,7 +97,7 @@
           <img
             class="slides-item slide-4"
             id="slide-4"
-            src="/images/still4.webp"
+            src="./images/still4.webp"
             aria-label="slide 4 of 5"
             alt="voorkant van het restaurant"
           />
@@ -105,7 +105,7 @@
           <img
             class="slides-item slide-5"
             id="slide-5"
-            src="/images/still5.webp"
+            src="./images/still5.webp"
             aria-label="slide 5 of 5"
             alt="gele vogel"
           />
@@ -117,7 +117,7 @@
           <img
             class="slides-item slide-1"
             id="slide-1"
-            src="/images/cast1.webp"
+            src="./images/cast1.webp"
             aria-label="slide 1 of 5"
             alt="emma tammi, regisseur"
           />
@@ -125,7 +125,7 @@
           <img
             class="slides-item slide-2"
             id="slide-2"
-            src="/images/cast2.webp"
+            src="./images/cast2.webp"
             aria-label="slide 2 of 5"
             alt="josh hutcherson"
           />
@@ -133,7 +133,7 @@
           <img
             class="slides-item slide-3"
             id="slide-3"
-            src="/images/cast3.webp"
+            src="./images/cast3.webp"
             aria-label="slide 3 of 5"
             alt="elizabeth lail"
           />
@@ -141,7 +141,7 @@
           <img
             class="slides-item slide-4"
             id="slide-4"
-            src="/images/cast4.webp"
+            src="./images/cast4.webp"
             aria-label="slide 4 of 5"
             alt="matthew lillard"
           />
@@ -149,7 +149,7 @@
           <img
             class="slides-item slide-5"
             id="slide-5"
-            src="/images/cast5.webp"
+            src="./images/cast5.webp"
             aria-label="slide 5 of 5"
             alt="Piper rubio"
           />
