--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             alt="Five night at freddy's "
           />
         </a>
-        <a>
+        <a href="#">
           <img
             class="slides-item slide-2"
             id="slide-2"
@@ -53,29 +53,33 @@
             alt="Hungergames, klik voor meer info"
           />
         </a>
-        <img
-          class="slides-item slide-3"
-          id="slide-3"
-          src="./images/flowermoon2.jpg"
-          aria-label="slide 3 of 5"
-          alt="flowermoon"
-        />
-
-        <img
-          class="slides-item slide-4"
-          id="slide-4"
-          src="./images/wish.jpeg"
-          aria-label="slide 4 of 5"
-          alt="wish"
-        />
-
-        <img
-          class="slides-item slide-5"
-          id="slide-5"
-          src="./images/trolls.webp"
-          aria-label="slide 5 of 5"
-          alt="trolls"
-        />
+        <a href="#">
+          <img
+            class="slides-item slide-3"
+            id="slide-3"
+            src="./images/flowermoon2.jpg"
+            aria-label="slide 3 of 5"
+            alt="flowermoon"
+          />
+        </a>
+        <a href="#">
+          <img
+            class="slides-item slide-4"
+            id="slide-4"
+            src="./images/wish.jpeg"
+            aria-label="slide 4 of 5"
+            alt="wish"
+          />
+        </a>
+        <a href="#">
+          <img
+            class="slides-item slide-5"
+            id="slide-5"
+            src="./images/trolls.webp"
+            aria-label="slide 5 of 5"
+            alt="trolls"
+          />
+        </a>
       </section>
       <button class="button">Koop nu</button>
     </section>
@@ -139,7 +143,7 @@
       </section>
       <img
         class="ClubPathe"
-        src="/images/Clubpathe.webp"
+        src="./images/Clubpathe.webp"
         alt="ClubPathe Logo"
       />
       <h2>abonnementen - nu 1 maand gratis met code:ClubPathe</h2>
@@ -153,7 +157,7 @@
       <button class="button">Klik hier voor 1 maand gratis</button>
       <img
         class="Imax"
-        src="/images/imax-2.png"
+        src="./images/imax-2.png"
         alt="ontdek imax. Het verschil tussen zien en ervaren"
       />
       <img
@@ -176,20 +180,20 @@
       />
     </section>
     <footer>
-      <img class="Icon" src="/images/xlogo.svg" alt="Bezoek onze x pagina " />
+      <img class="Icon" src="./images/xlogo.svg" alt="Bezoek onze x pagina " />
       <img
         class="Icon"
-        src="/images/insta-svgrepo-com.svg"
+        src="./images/insta-svgrepo-com.svg"
         alt="Bezoek onze Instagram pagina"
       />
       <img
         class="Icon"
-        src="/images/tiktok-svgrepo-com.svg"
+        src="./images/tiktok-svgrepo-com.svg"
         alt="Bezoek onze Tiktok pagina"
       />
       <img
         class="Icon"
-        src="/images/facebook-svgrepo-com.svg"
+        src="./images/facebook-svgrepo-com.svg"
         alt="Bezoek onze facbook pagina "
       />
     </footer>
