--- a/film.html
+++ b/film.html
@@ -118,7 +118,7 @@
             class="slides-item slide-1"
             id="slide-1"
             src="./images/cast1.webp"
-            aria-label="slide 1 of 5"
+            aria-label="emma tammi, regisseur"
             alt="emma tammi, regisseur"
           />
 
@@ -126,7 +126,7 @@
             class="slides-item slide-2"
             id="slide-2"
             src="./images/cast2.webp"
-            aria-label="slide 2 of 5"
+            aria-label="josh hutcherson"
             alt="josh hutcherson"
           />
 
@@ -134,7 +134,7 @@
             class="slides-item slide-3"
             id="slide-3"
             src="./images/cast3.webp"
-            aria-label="slide 3 of 5"
+            aria-label="elizabeth lail"
             alt="elizabeth lail"
           />
 
@@ -142,7 +142,7 @@
             class="slides-item slide-4"
             id="slide-4"
             src="./images/cast4.webp"
-            aria-label="slide 4 of 5"
+            aria-label="matthew lillard"
             alt="matthew lillard"
           />
 
@@ -150,7 +150,7 @@
             class="slides-item slide-5"
             id="slide-5"
             src="./images/cast5.webp"
-            aria-label="slide 5 of 5"
+            aria-label="Piper rubio"
             alt="Piper rubio"
           />
         </section>
