--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             class="slides-item slide-1"
             id="slide-1"
             src="./images/fnaf.jpeg"
-            aria-label="slide 1 of 5"
+            aria-label="Five night at freddy's"
             alt="Five night at freddy's "
           />
         </a>
@@ -49,7 +49,7 @@
             class="slides-item slide-2"
             id="slide-2"
             src="./images/hungergames.jpg"
-            aria-label="slide 2 of 5"
+            aria-label="Hungergames, klik voor meer info5"
             alt="Hungergames, klik voor meer info"
           />
         </a>
@@ -67,7 +67,7 @@
             class="slides-item slide-4"
             id="slide-4"
             src="./images/wish.jpeg"
-            aria-label="slide 4 of 5"
+            aria-label="wish"
             alt="wish"
           />
         </a>
@@ -76,7 +76,7 @@
             class="slides-item slide-5"
             id="slide-5"
             src="./images/trolls.webp"
-            aria-label="slide 5 of 5"
+            aria-label="trolls"
             alt="trolls"
           />
         </a>
@@ -100,45 +100,51 @@
       </form>
       <section class="carousel-nieuws" aria-label="carousel-nieuws">
         <section class="slides-nieuws">
-          <img
-            class="slides-item-nieuws slide-1-nieuws"
-            id="slide-1"
-            src="./images/Nieuws1.png"
-            aria-label="slide 1 of 5"
-            alt="stichting jarige job"
-          />
-
-          <img
-            class="slides-item-nieuws slide-2-nieuws"
-            id="slide-2"
-            src="./images/Nieuws2.png"
-            aria-label="slide 2 of 5"
-            alt="geef pathe cadeaubon"
-          />
-
-          <img
-            class="slides-item-nieuws slide-3-nieuws"
-            id="slide-3"
-            src="./images/Nieuws3.png"
-            aria-label="slide 3 of 5"
-            alt="Nieuwe stoelen in pathe Scheveningen"
-          />
-
-          <img
-            class="slides-item-nieuws slide-4-nieuws"
-            id="slide-4"
-            src="./images/Nieuws4.png"
-            aria-label="slide 4 of 5"
-            alt="Vier 100 jaar disney bij Pathe"
-          />
-
-          <img
-            class="slides-item-nieuws slide-5-nieuws"
-            id="slide-5"
-            src="./images/Nieuws5.png"
-            aria-label="Vier het sinterklaas weekend bij Pathe"
-            alt=""
-          />
+          <a href="#">
+            <img
+              class="slides-item-nieuws slide-1-nieuws"
+              id="slide-1"
+              src="./images/Nieuws1.png"
+              aria-label="stichting jarige job"
+              alt="stichting jarige job"
+            />
+          </a>
+          <a href="#">
+            <img
+              class="slides-item-nieuws slide-2-nieuws"
+              id="slide-2"
+              src="./images/Nieuws2.png"
+              aria-label="geef pathe cadeaubon"
+              alt="geef pathe cadeaubon"
+            />
+          </a>
+          <a href="#">
+            <img
+              class="slides-item-nieuws slide-3-nieuws"
+              id="slide-3"
+              src="./images/Nieuws3.png"
+              aria-label="Nieuwe stoelen in pathe Scheveningen"
+              alt="Nieuwe stoelen in pathe Scheveningen"
+            />
+          </a>
+          <a href="#">
+            <img
+              class="slides-item-nieuws slide-4-nieuws"
+              id="slide-4"
+              src="./images/Nieuws4.png"
+              aria-label="Vier 100 jaar disney bij Pathe"
+              alt="Vier 100 jaar disney bij Pathe"
+            />
+          </a>
+          <a href="#">
+            <img
+              class="slides-item-nieuws slide-5-nieuws"
+              id="slide-5"
+              src="./images/Nieuws5.png"
+              aria-label="Vier het sinterklaas weekend bij Pathe"
+              alt=""
+            />
+          </a>
         </section>
       </section>
       <img
